# nasa_airport_throughput2024

./: README.md  pyproject.toml
0_file_operations/: 0-mount-container-blob-storage.ipynb  0_azure_blob_storage_extractor.py  1_read_h5.bza _files.ipynb
1_eda/: 0-explore_fuser_data.ipynb  0-explore_my_data.ipynb  0-explore_the_data.py  1-save_data_as_hive_tables.ipynb  3-explore_fuser_katl_data.ipynb  README.md
2_prediction/: README.md
5_presentations/: data_exploration.tex
