[tool.poetry]
name = "nasa-airport-throughput2024"
version = "0.1.0"
description = ""
authors = ["Harold Nikoue <swahoin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
