[tool.poetry]
name = "nasa-airport-throughput2024"
version = "0.1.0"
description = ""
authors = ["Harold Nikoue <swahoin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
azure-mgmt-storage = "^21.2.1"
azure-storage-blob = "^12.23.1"
azure-mgmt-compute = "^33.0.0"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
